--- a/notuber/index.html
+++ b/notuber/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-<!--
- @license
- Copyright 2019 Google LLC. All Rights Reserved.
- SPDX-License-Identifier: Apache-2.0
--->
 <html>
   <head>
-    <title>Simple Map</title>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>    
-    <link rel="stylesheet" href="style.css" type="text/css">    
-    <script type="module" src="index.js"></script>
+    <title>Not Uber</title>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+
+    <link rel="stylesheet" type="text/css" href="./style.css" />
+    <script type="module" src="./index.js"></script>
   </head>
   <body>
     <div id="map"></div>
