--- a/notuber/google_maps_example.html
+++ b/notuber/google_maps_example.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
 <html>
   <head>
-    <title>Not Uber</title>
+    <title>Simple Map</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
     <link rel="stylesheet" type="text/css" href="./style.css" />
-    <script src="index.js"></script>
+    <script type="module" src="./index.js"></script>
   </head>
   <body>
     <div id="map"></div>
@@ -17,7 +16,7 @@
       with https://www.npmjs.com/package/@googlemaps/js-api-loader.
       -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCAB2A0_ej5ZtoRuZl_k-YAOnBQArzd7WA&callback=initMap&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
       defer
     ></script>
   </body>
