--- a/notuber/index.html
+++ b/notuber/index.html
@@ -2,10 +2,7 @@
 <html>
   <head>
     <title>Not Uber</title>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-
-    <link rel="stylesheet" type="text/css" href="./style.css" />
-    <script src="index.js"></script>
+    <link rel="stylesheet" type="text/css" href="minified.css" />
   </head>
   <body>
     <div id="map"></div>
@@ -19,6 +16,8 @@
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCAB2A0_ej5ZtoRuZl_k-YAOnBQArzd7WA&callback=initMap&v=weekly"
       defer
-    ></script>
+    ></script>    
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>    
+    <script src="index.js"></script>
   </body>
 </html>
