renamed minified css file in notuber

--- a/notuber/index.html
+++ b/notuber/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Not Uber</title>
-    <link rel="stylesheet" type="text/css" href="minified.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
     <div id="map"></div>
