--- a/notuber/index.html
+++ b/notuber/index.html
@@ -88,7 +88,7 @@
 
       // Step 1: Make an instance of the XMLHttpRequest object to make an HTTP POST request
       request = new XMLHttpRequest();
-      request.open("POST", "https://peaceful-citadel-39984.herokuapp.com/", true);
+      request.open("POST", "https://peaceful-citadel-39984.herokuapp.com/rides", true);
       request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
 
       // Step 3: Set up handler / callback function to deal with HTTP response
